--- a/index.html
+++ b/index.html
@@ -26,27 +26,7 @@
   <body>
     <div class="card">
   <div class="card-body">
-    <h5 class="card-title">Welcome to SlideServer</h5>
-    <p class="card-text">We make old RR builds!</p>
-    <a href="https://drive.google.com/file/d/1B2VLY4E1XOOsMd83Gg2lpQXGqoVjyZ8T/view" class="btn btn-primary">Download 2018</a>
-<a href="https://drive.google.com/drive/u/1/folders/1x50PxIQuN12vvIsNrS0LO7HbdULQuSHX" class="btn btn-primary">Download 2016</a>
-<!-- Button trigger modal -->
-<button type="button" class="btn btn-primary" data-mdb-toggle="modal" data-mdb-target="#exampleModal">
-Download 2019
-</button>
-
-<!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Info</h5>
-        <button type="button" class="btn-close" data-mdb-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">2019 does not have a server.</div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-mdb-dismiss="modal">Close</button>
-        <a href="https://drive.google.com/file/d/1IXpGixkbw1aO7T10CvlaVZEHSjkT6pbY/view?usp=sharing" class="btn btn-primary">Download anyway</a>
+    <h5 class="card-title">SlideServer</h5>
       </div>
     </div>
   </div>
