--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
 <header>
       </div>
     </div>
-    
+    <div class="alert alert-danger">
+<i class="fas fa-exclamation-triangle"></i> <b>Please note that IP addresses are exposed to server hosts when you connect.</b> Please use a VPN and be safe! This applies vice versa to server hosts.
+</div>
   </div>
 </div>
   </div>
