--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
     </div>
     <div class="alert alert-danger">
-<i class="fas fa-exclamation-triangle"></i> <b>Please note that IP addresses are exposed to server hosts when you connect.</b> Please use a VPN and be safe! This applies vice versa to server hosts.
+<i class="fas fa-exclamation-triangle"></i> <b>Hello! You might see nothing because something is coming soon to this site!
 </div>
   </div>
 </div>
