--- a/index.html
+++ b/index.html
@@ -20,7 +20,21 @@
       </div>
     </div>
     <div class="alert alert-danger">
-<i class="fas fa-exclamation-triangle"></i> <b>Hello! You might see nothing because something is coming soon to this site!
+<div>
+  <b-jumbotron bg-variant="info" text-variant="white" border-variant="dark">
+    <template #header>SlideServer (Dev)</template>
+
+    <template #lead>
+      Hello all developers!
+    </template>
+
+    <hr class="my-4">
+
+    <p>
+      I don't know what to put here
+    </p>
+  </b-jumbotron>
+</div>
 </div>
   </div>
 </div>
